test/111.txt
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task1\lexergenerator.cpp:454: error: request for member 'first' in 'entry', which is of non-class type 'const int'
..\..\src\task1\lexergenerator.cpp: In member function 'QString LexerGenerator::generateAcceptStatesMap(const QList<RegexItem>&, const DFA&)':
..\..\src\task1\lexergenerator.cpp:454:32: error: request for member 'first' in 'entry', which is of non-class type 'const int'
  454 |         DFAState state = entry.first;
      |                                ^~~~~
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task1\lexergenerator.cpp:455: error: request for member 'second' in 'entry', which is of non-class type 'const int'
..\..\src\task1\lexergenerator.cpp:455:32: error: request for member 'second' in 'entry', which is of non-class type 'const int'
  455 |         int regexIndex = entry.second;
      |                                ^~~~~~
:-1: error: [Makefile.Debug:3207: debug/lexergenerator.o] Error 1
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task1\lexergenerator.cpp:454: error: Member reference base type 'int const' is not a structure or union
D:\Programmes\Qt\byylCourseDesign\byylCD\src\task1\lexergenerator.cpp:455: error: Member reference base type 'int const' is not a structure or union